2018-04-28  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug): If .debug_info is needed implicitly by
	then handle it first before handling any other debug section.
	(parse_opt): Set implicit_debug_sections to section_info when
	showing all debug sections.

2018-05-05  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Handle DW_FORM_ref_sup4 and
	DW_FORM_ref_sup8 as references.

2018-04-24  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_str_section): Take raw section data. Don't
	use dwarf_getstring, but determine start and end of string from
	offset and section data directly.
	(print_debug): Handle ".debug_line_str" like ".debug_str".

2018-04-19  Andreas Schwab  <schwab@suse.de>

	* elflint.c (valid_e_machine): Add EM_RISCV.

2018-04-16  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_line_section). In advance_pc, advance
	using op_addr_advance, not op_advance.

2018-04-14  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Only show errors when not silent.

2018-03-23  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Handle DW_FORM_strx[1234].

2018-03-22  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Handle DW_FORM_addrx[1234].

2018-03-28  Mark Wielaard  <mark@klomp.org>

	* readelf.c (handle_sysv_hash): Break bucket chain after nchain
	entries are found.
	(handle_sysv_hash64): Likewise.

2018-03-27  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Print dwarf_dieoffset as %PRIx64,
	not %zx.

2018-03-20  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Report error when DW_AT_decl_file or
	DW_AT_call_file cannot be resolved.

2018-03-06  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_ops): Handle DW_OP_addrx, DW_OP_constx,
	DW_OP_implicit_pointer, DW_OP_entry_value, DW_OP_const_type,
	DW_OP_regval_type, DW_OP_deref_type, DW_OP_xderef_type,
	DW_OP_convert, DW_OP_reinterpret.

2018-03-01  Mark Wielaard  <mark@klomp.org>
